# from_code_to_robot

./: .gitattributes  .gitignore  .gitlab-ci.yml  Forward_Kinematics.mlx  README.md  Ros2Connection.mlx  mkdocs.yml
ai/: PickPlaceDiscreteEnv.m  PickPlaceDiscreteEnv2.m  PickPlaceDiscreteEnvVisualizer.m  PickPlaceRL.mlx  PickPlaceRewardFunc.m  README.md  dqn_her2.mat  dqn_her_1_object.mat  dqn_her_2_object.mat  simple_visualization_test.m  tesing.mlx  test_pick_place_dqn.m  two_objects_visualization_test.m
ai/+tests/: TestIsDoneFuncPickPlaceEnv.m  TestResetFuncPickPlaceEnv.m  TestStepFuncPickPlaceEnv.m
ai/+twoObjects/: PickPlaceIsDoneFunc.m  PickPlaceRewardFunc.m
ai/DQNHindsightMemoryExample/: NavigationDiscreteEnv.m  NavigationDiscreteEnvVisualizer.m  TrainDQNAgentInNavigationEnvWithHindsightReplayMemoryExample.mlx  myNavigationGoalIsDoneFcn.m  myNavigationGoalRewardFcn.m  visualization_example.m
ai/sdireports/: New_Report.html
ai/twoObject+s/: PickPlaceDiscreteEnv.m
computer_vision/: 1.Installation.mlx  2.Training_models.m  2.Training_models.mlx  3.Post_Processing.mlx  4.Evaluation.mlx  5.Experimentation.mlx  Evaluation.mlx  README.md  compareYOLOv8Filter.m  data.yaml  fruitsValidationData.mat  trainYOLOv8ObjectDetector.m  trainYOLOv8Wrapper.py  trainYoloV8
computer_vision/+utils/: Filter.m  PostProcessing.m  ReadClassNames.m  computeConfusionMatrix.m  computeConfusionMatrixFromFolder.m  computeConfusionMatrixObjectDetection.m  computeImageConfusionMatrix.m  computePrecisionFromConfusionMatrix.m  convertDatasetToMatlabFormat.m  detectAndDisplayImage.m  detectObjects.m  displayConfusionMatrix.m  displayFilteredDetections.m  displayIoU.m  getPredictions.m  loadModel.m  plotMetric.m  precisionRecallCurve.m  predict.m  readYoloLabel.m
computer_vision/+yolo/: installUltralytics.m  yolov8ObjectDetector.m  yolov8ObjectDetector2.m
computer_vision/ExperimentProject/: Experiment1Initialization1.mlx  Experiment1_training1.mlx
computer_vision/ExperimentProject3/: Experiment1_training1.mlx
computer_vision/ExperimentProject4/: Experiment1_training1.mlx
computer_vision/help-module/: getPythonInterpreter.m  testing.m  yolov8ObjectDetector.m
computer_vision/help-module/+helper/: extractDetections.m  postprocess.m
computer_vision/installation-module/: installUltralytics.m  yolov8ObjectDetector2.m
docs/: index.md
docs/ca/: index.md
docs/ca/javascripts/: katex-init.js
docs/ca/robotics/: A.Installation.md  Curriculum.md  D.Curriculum.md  Videos.md  index.md
docs/en/: index.md
docs/en/robotics/: B.Demo.md  Interact_With_Tutorial.md
docs/es/: index.md
docs/es/ai/: PickPlaceRL.md
docs/es/robotics/: Installation.md  Installation_Guide.md
docs/robotics/: Curriculum.md  Demo.md  Installation.md  index.md
docs/robotics/0.Basics/: Cells.md  Matrix_manipulation.md  Structures.md  Symbolic_Math_toolbox.md
robotics/: .~lock.from_code_to_robot_robotics_schedule.xlsx#  Class Turorial 1 UR3 Robot modeling.mlx  Known_bugs.mlx  README.md  from_code_to_robot_robotics_schedule.xlsx  generate_markdown_documentation.mlx  mkdocs.yml
robotics/Exercise-check/Check-engine/: TestMe.mlx  check_exercise.m
robotics/Functions/: dh2tf.m  dhcheck.m  getIndex.m  mat2json.m  plotTrajectory.m  rotm.m  roty.m  rotz.m  trotz.m
robotics/RS-Toolbox/: Class Turorial 1 UR3 Robot modeling.asv  Class Turorial 1 UR3 Robot modeling.mlx  Curriculum.mlx  Demo.mlx  Exercise-1-1.mlx  Forward_Kinematics.mlx  Installation.mlx  Installation_Guide.mlx  Interact_With_Tutorial.mlx  Inverse_Kinematics.mlx  Videos.mlx  index.mlx
robotics/RS-Toolbox/0.Basics/: Simulink.mlx  Structures.mlx  Symbolic_Math_toolbox.mlx
robotics/RS-Toolbox/Basics/: Cells.mlx  Matrix_manipulation.asv  Matrix_manipulation.mlx  (+2 more)
robotics/RS-Toolbox_docs/: Curriculum.md
robotics/RTDE/: RTDE Setup.docx  RTDE_Connection.mlx  URServerScript.script  differentCommands.mlx  setControllerInputRecipe.m  ~$DE Setup.docx
robotics/Ros/: DEFAULT_FASTRTPS_PROFILE.xml.txt  LaunchGzandRVIZ.mlx  Ros2Connection.mlx  Ros2_easy_publisher_example.mlx  SendJointStatesToRviz.asv  SendJointStatesToRviz.mlx  SimulateUR5MATLABAndGazeboGlueDispensingWindshieldExample.mlx  TestSeeWLSTopics.mlx  easy_sub.mlx  testspeedcontrol.mlx
robotics/Ros/interfaces/matlab_msg_gen/glnxa64/src/ros_gz_interfaces/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
robotics/Ros/interfaces/matlab_msg_gen/glnxa64/src/ros_gz_interfaces/m/+ros/+internal/+ros2/+custommessages/+ros_gz_interfaces/: altimeter.m  dataframe.m  entity.m  entityFactory.m  jointWrench.m  paramVec.m  stringVec.m
robotics/Ros/interfaces/matlab_msg_gen/glnxa64/src/ros_gz_interfaces/src/: ros_gz_interfaces_Altimeter_message.cpp  ros_gz_interfaces_Contact_message.cpp  ros_gz_interfaces_Contacts_message.cpp  ros_gz_interfaces_ControlWorld_service.cpp  ros_gz_interfaces_Dataframe_message.cpp  ros_gz_interfaces_DeleteEntity_service.cpp  ros_gz_interfaces_EntityFactory_message.cpp  ros_gz_interfaces_EntityWrench_message.cpp  ros_gz_interfaces_Entity_message.cpp  ros_gz_interfaces_Float32Array_message.cpp  ros_gz_interfaces_GuiCamera_message.cpp  ros_gz_interfaces_JointWrench_message.cpp  ros_gz_interfaces_Light_message.cpp  ros_gz_interfaces_LogicalCameraImageModel_message.cpp  ros_gz_interfaces_LogicalCameraImage_message.cpp  ros_gz_interfaces_MaterialColor_message.cpp  ros_gz_interfaces_ParamVec_message.cpp  ros_gz_interfaces_SensorNoise_message.cpp  ros_gz_interfaces_SetEntityPose_service.cpp  ros_gz_interfaces_SpawnEntity_service.cpp  ros_gz_interfaces_StringVec_message.cpp  ros_gz_interfaces_TrackVisual_message.cpp  ros_gz_interfaces_VideoRecord_message.cpp  ros_gz_interfaces_WorldControl_message.cpp  ros_gz_interfaces_WorldReset_message.cpp
robotics/Ros/src/trajectory_tracker/: package.xml  setup.py
robotics/Ros/src/trajectory_tracker/trajectory_tracker/: track_trajectory.py
robotics/Ros/src/tutorialteleop/: package.xml  setup.cfg  setup.py
robotics/Ros/src/tutorialteleop/tutorialteleop/: teleop.py  teleop_global.py
robotics/TutorialEnvironment/: Installation_Guide.mlx
(+797 files in other folders)
